<?xml version="1.0" encoding="utf-8"?>
<resources>
<string name="bt_not_enabled_leaving">蓝牙未被启用</string>
    <string name="app_name">通信学院串口助手</string> 
    <string name="Str">连接设备</string>
    <string name="Str1">打开蓝牙</string>
     <string name="Str4">关闭蓝牙</string>
    <string name="Str2">更改蓝牙名称</string>
    <string name="menu_exit">扫描蓝牙设备</string>
    <string name="no_match_device">未配对设备</string>
    <string name="find_device">查找设备</string>
    <string name="cancel">取消</string>
    <string name="select_connect_device">选取连接设备</string>
    <string name="Str3">设置蓝牙可见性</string>
    <string name="scanning">扫描设备中...</string>
    <string name="select_device">完成搜索，选择设备连接</string>
    <string name="none_paired">没有设备已配对</string>
    <string name="none_found">没有找到设备</string>
    <string name="title_paired_devices">已配对设备</string>
    <string name="title_other_devices">其他可用的设备</string>
     <string name="not_connected">您没有连接到设备，请按菜单键进入设备搜索并连接设备。</string>
      <string name="title_connecting">正在连接...</string>
    <string name="title_connected_to">已连接 </string>
    <string name="title_not_connected">没有连接</string>
    <string name="equipment">连接设备：</string>
    <string name="now_equipment">无</string>
    <string name="State">连接状态：</string>
    <string name="clink">点击进入</string>
    <string name="welcome">欢迎使用本款APP</string>
    <string name="Author">Designed By qingfeng</string>
    <string name="TEXT_ITEM">菜单</string>
    <string name="TEXT_SAVE">保存</string>
    <string name="TEXT_CLEAR">清空</string>
    <string name="TEXT_STOP">停止</string>
    <string name="TEXT_SEND">发送</string>
    <string name="HINT_RECEIVE">接收区</string>
    <string name="HINT_SEND">发送区</string>
    
   
</resources>