<menu xmlns:android="http://schemas.android.com/apk/res/android" >
<item
        android:id="@+id/strOn"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/Str1"/>
<item
        android:id="@+id/strOff"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/Str4"/>
<item
        android:id="@+id/str"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/Str"/>

<item
        android:id="@+id/str2"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/Str2"/>
<item
        android:id="@+id/str3"
        android:orderInCategory="100"
        android:showAsAction="never"
        android:title="@string/Str3"/>
</menu>