<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/bc2" >

    <TextView
        android:id="@+id/TV_RECEIVE"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="120dp"
        android:text="@string/welcome"
        android:textSize="25sp" />

    <TextView
        android:id="@+id/Clink"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="41dp"
        android:text="@string/clink"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/textAuthor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/TV_RECEIVE"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="36dp"
        android:text="@string/Author" />

</RelativeLayout>